# TEKKEN-MOTION

./: .gitignore  LICENSE  README.md  gesture_config.json  key_config.json  pose_config.json  pyproject.toml
core/: input.py  settings.py
mobile/: client.html  server.py
pose/: pose.py  setup.py  utils.py
track/: motion_detector.py  setup.py  tracking.py  utils.py
