[project]
name = "gesture-gaming-tekken"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imutils>=0.5.4",
    "mediapipe>=0.10.14",
    "numpy>=2.2.5",
    "opencv-contrib-python>=4.11.0.86",
    "opencv-python>=4.11.0.86",
    "pynput>=1.8.1",
    "pyyaml>=6.0.2",
]
